For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-07-29:

- Fixed a serious but rarely occurring regression that corrupts variable
  names in assignments. It could be triggered in large scripts and cause a
  spurious "invalid variable name" error. Bug introduced on 2024-01-16.

2025-05-27:

- Fixed a crash that could occur in some scenarios when /opt/ast/bin
  builtins handled invalid options in virtual subshells.

- Fixed a bug in printf where \u0025 was taken as a % operator in a
  formatter argument. For example, printf '\u0025\n' now correctly prints a
  % followed by a newline instead of producing an error.

- [v1.1] Fixed another bug with superfluous operands in test/[ that slipped
  through the cracks on 2024-12-08: test -n -a "" incorrectly returned 0. In
  native mode, this is now an error (superflous operand to the unary -n
  operator) and in POSIX mode, it returns 1/false, as POSIX-1.2017 rules
  require this to be a test for the non-emptiness of both strings -n and "".

2025-05-26:

- Fixed a POSIX mode bug in test/[ (with 'posix' shell option on):
  * test ! foo -o bar	wrongly returned 0/true, now returns 1/false.
  * test ! foo -a ''	wrongly returned 1/false, now returns 0/true.
  This regression was introduced on 2021-11-13.

- Made the handling of deprecated parenthesis operators in test/[ slightly
  more permissive for increased compatibility with other shells and external
  test/[ commands.

2025-05-15:

- Fixed an issue that prevented Unicode code points in $'...' strings and
  printf(1) formatters from being converted to the current locale. For
  example, if the locale on Linux/BSD/macOS is el_GR.ISO8859-7, echo $'\u03B1'
  now outputs a Greek lower-case alpha encoded in ISO8859-7 ($'\xE1').

2025-05-10:

- Fixed a memory leak in history expansion.

- Fixed a crash in 'fc -p'/'hist -p' that occurred when an incorrect history